# genie-core

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEBASE.md  CONNECTIVITY.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  Makefile  README.md  VECTOR_MEMORY.md  docker-compose.dev.yml
.cargo/: config.toml
crates/dashboard/: dashboard.js  index.html
crates/genie-api/src/: http.rs  main.rs  routes.rs
crates/genie-core/: Cargo.toml
crates/genie-core/src/: chat_ui.html  context.rs  conversation.rs  lib.rs  main.rs  prompt.rs  reasoning.rs  repl.rs  runtime_contract.rs  server.rs  telegram.rs  voice_loop.rs
crates/genie-core/src/connectivity/: mod.rs
crates/genie-core/src/ha/: client.rs  mod.rs  policy.rs  provider.rs
crates/genie-core/src/llm/: client.rs
crates/genie-core/src/memory/: decay.rs  extract.rs  inject.rs  mod.rs  policy.rs  recall.rs
crates/genie-core/src/ota/: mod.rs
crates/genie-core/src/profile/: ingest.rs  mod.rs  toml_profile.rs
crates/genie-core/src/security/: audit.rs  env_sanitize.rs  loop_guard.rs  mod.rs  taint.rs
crates/genie-core/src/skills/: loader.rs  mod.rs
crates/genie-core/src/tools/: actuation.rs  dispatch.rs  home.rs  mod.rs  parser.rs  quick.rs  system.rs  web_search.rs
crates/genie-core/src/voice/: aec.rs  dsp.rs  format.rs  identity.rs  intent.rs  language.rs  mod.rs  noise.rs  pipeline.rs  streaming.rs  stt.rs  tts.rs  vad.rs
crates/genie-core/tests/: tool_dispatch_test.rs  tools_test.rs
crates/genie-ctl/: Cargo.toml
crates/genie-governor/: Cargo.toml
crates/genie-governor/src/: control.rs  governor.rs  main.rs  service_ctl.rs  store.rs  tegra_reader.rs
crates/genie-health/: Cargo.toml
crates/genie-health/src/: checker.rs  main.rs
crates/genie-skill-sdk/: Cargo.toml
deploy/: setup-jetson.sh
deploy/config/: geniepod.dev.toml  geniepod.toml  mosquitto.conf  profile.toml.example
deploy/docker/: docker-compose.yml
deploy/scripts/: detect-audio-device.sh  genie-restart-all.sh  genie-wake-listen.py  genie-wakeword.py
deploy/systemd/: genie-api.service  genie-audio.service  genie-core.service  genie-governor.service  genie-health.service  genie-llm.service  genie-mqtt.service  genie-wakeword.service  geniepod-late.target  geniepod.target  homeassistant.service
doc/: README.md  alpha5-reflection.md  configuration.md  core-subsystems.md  deployment-and-ops.md  http-and-cli.md  overview.md  repo-map.md  research-agentic-ai.md  services-and-crates.md
skills/: SKILL-DEVELOPER-GUIDE.md
skills/hello-world/: Cargo.toml
skills/hello-world/src/: lib.rs
(+8 files in other folders)
