[package]
name = "genie-health"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GeniePod health monitor — polls service endpoints, forwards optional alerts, systemd watchdog"

[[bin]]
name = "genie-health"
path = "src/main.rs"

[dependencies]
genie-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
